--- a/.github/workflows/test-and-build.yml
+++ b/.github/workflows/test-and-build.yml
@@ -33,7 +33,8 @@ jobs:
 
       - name: Set additional variables
         id: variables
-        uses: icalia-actions/common-variables@v0.0.3
+        # uses: icalia-actions/common-variables@v0.0.3
+        uses: ./
 
       - name: Set build timestamp
         id: set-build-timestamp
