Check if it's working...

--- a/.github/workflows/test-and-build.yml
+++ b/.github/workflows/test-and-build.yml
@@ -60,6 +60,8 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
+      - run: docker image ls
+
       - name: Compare the expected and actual dist/ directories
         env:
           UID: ${{ steps.variables.outputs.runner-uid }}
